Removed balance view from the account view, to avoid everyone knowing your current BTC balance. Fixed up a bit of visible layout, so that you can at least see what's going on.

--- a/public/stylesheets/desktop.css
+++ b/public/stylesheets/desktop.css
@@ -1,3 +1,29 @@
+body {
+	background-color: white;
+}
+
+#content {
+	background-color: white;
+	margin-left: 15em;
+	padding: 0.5em;
+	border-color: #0071C2;
+	border-width: 0.5em;
+	border-style: solid;
+}
+
+#footer {
+	background-color: white;
+	padding: 0.5em;
+	border-color: #0071C2;
+	border-width: 0.5em;
+	border-style: solid;
+}
+
 .sidebar {
+	background-color: white;
+	padding: 0.5em;
+	border-color: #0071C2;
+	border-width: 0.5em;
+	border-style: solid;
 	float: left;
 }
